Fix devops adoption mobile actions css

--- a/ee/app/assets/stylesheets/page_bundles/dev_ops_report.scss
+++ b/ee/app/assets/stylesheets/page_bundles/dev_ops_report.scss
@@ -13,8 +13,10 @@
   }
 }
 
-.actions-cell {
-  width: $gl-spacing-scale-6;
+@include media-breakpoint-up(sm) {
+  .actions-cell {
+    width: $gl-spacing-scale-6;
+  }
 }
 
 @include media-breakpoint-down(sm) {
@@ -23,5 +25,9 @@
       width: 100% !important;
       text-align: center !important;
     }
+  }
+
+  .actions-cell::before {
+    @include gl-display-none;
   }
 }
